--- a/BigSchool/BigSchool.csproj
+++ b/BigSchool/BigSchool.csproj
@@ -214,6 +214,10 @@
     <Compile Include="Migrations\202006050141394_PopulateCategoryTable.Designer.cs">
       <DependentUpon>202006050141394_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006121248394_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202006121248394_AddNameColumnToApplicationUser.Designer.cs">
+      <DependentUpon>202006121248394_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -307,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006050141394_PopulateCategoryTable.resx">
       <DependentUpon>202006050141394_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006121248394_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202006121248394_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
